--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <header class="page-header">
+        <div class="container header-container">
         <nav class="header-nav">
             <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul class="nav-list">
@@ -32,6 +33,7 @@
                 <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        </div>
     </header>
 
     <main>
@@ -42,7 +44,7 @@
 
         <section>
             <h2 class="hidden">Our Advantages</h2>
-            <ul>
+            <ul class="subtitle-list">
                 <li>
                     <h3 class="subtitle">Strategy</h3>
                     <p class="subtitle-text">
