--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 
     <main>
         <section class="hero">
+            <div class="container hero-title">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button class="main-title-button" type="button">Order Service</button>
+            </div>
         </section>
 
         <section>
