--- a/index.html
+++ b/index.html
@@ -44,40 +44,40 @@
             </div>
         </section>
 
-        <section>
-            <h2 class="hidden">Our Advantages</h2>
-            <ul class="subtitle-list">
-                <li>
-                    <h3 class="subtitle">Strategy</h3>
-                    <p class="subtitle-text">
-                        Our goal is to identify the business problem to walk away with the perfect and creative
-                        solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="subtitle">Punctuality</h3>
-                    <p class="subtitle-text">
-                        Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="subtitle">Diligence</h3>
-                    <p class="subtitle-text">
-                        Research and confirm brands with the strongest digital growth opportunities and minimize risk.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="subtitle">Technologies</h3>
-                    <p class="subtitle-text">
-                        Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
-                    </p>
-                </li>
-            </ul>
+        <section class="advantages-section">
+            <div class="container">
+                <h2 class="visually-hidden">Our Advantages</h2>
+                <ul class="advantages-list">
+                    <li class="advantages-item">
+                        <h3 class="advantages-title">Strategy</h3>
+                        <p class="advantages-text">
+                            Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                        </p>
+                    </li>
+                    <li class="advantages-item">
+                        <h3 class="advantages-title">Punctuality</h3>
+                        <p class="advantages-text">
+                            Bring the key message to the brand's audience for the best price within the shortest possible time.
+                        </p>
+                    </li>
+                    <li class="advantages-item">
+                        <h3 class="advantages-title">Diligence</h3>
+                        <p class="advantages-text">
+                            Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                        </p>
+                    </li>
+                    <li class="advantages-item">
+                        <h3 class="advantages-title">Technologies</h3>
+                        <p class="advantages-text">
+                            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section class="team-section">
+            <div class="container team-section">
             <h2 class="team-section-title">Our Team</h2>
             <ul class="team-list">
                 <li class="team-card">
@@ -101,9 +101,11 @@
                     <p class="team-role">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
         
-        <section class="features-section"> 
+        <section class="features-section">
+            <div class="container features-section "> 
         <h2 class="features-section-title">Our Portfolio</h2>
         <ul class="features-list">
             <li class="features-card">
@@ -137,17 +139,20 @@
                         <p class="feature-item">Marketing</p>
             </li>
         </ul>
+        </div>
         </section>
 
     </main>
 
     <footer class="page-footer">
+        <div class="container page-footer">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
 
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
         </p>
+        </div>
     </footer>
 </body>
 
