--- a/index.html
+++ b/index.html
@@ -77,32 +77,41 @@
         </section>
 
         <section class="team-section">
-            <div class="container team-section">
-            <h2 class="team-section-title">Our Team</h2>
-            <ul class="team-list">
-                <li class="team-card">
-                    <img src="./images/images/img.jpg" alt="Mark Guerrero, Product Designer" width="264" />
-                    <h3 class="team-name">Mark Guerrero</h3>
-                    <p class="team-role">Product Designer</p>
-                </li>
-                <li class="team-card">
-                    <img src="./images/images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="264" />
-                    <h3 class="team-name">Tom Ford</h3>
-                    <p class="team-role">Frontend Developer</p>
-                </li>
-                <li class="team-card">
-                    <img src="./images/images/img-3.jpg" alt="Camila Garcia, Marketing" width="264" />
-                    <h3 class="team-name">Camila Garcia</h3>
-                    <p class="team-role">Marketing</p>
-                </li>
-                <li class="team-card">
-                    <img src="./images/images/img-4.jpg" alt="Daniel Wilson, UI Designer" width="264" />
-                    <h3 class="team-name">Daniel Wilson</h3>
-                    <p class="team-role">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="team-section-title">Our Team</h2>
+                <ul class="team-list">
+                    <li class="team-card">
+                        <img src="./images/images/img.jpg" alt="Mark Guerrero, Product Designer" width="264" />
+                        <div class="team-card-content">
+                            <h3 class="team-card-name">Mark Guerrero</h3>
+                            <p class="team-card-role">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="team-card">
+                        <img src="./images/images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="264" />
+                        <div class="team-card-content">
+                            <h3 class="team-card-name">Tom Ford</h3>
+                            <p class="team-card-role">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="team-card">
+                        <img src="./images/images/img-3.jpg" alt="Camila Garcia, Marketing" width="264" />
+                        <div class="team-card-content">
+                            <h3 class="team-card-name">Camila Garcia</h3>
+                            <p class="team-card-role">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="team-card">
+                        <img src="./images/images/img-4.jpg" alt="Daniel Wilson, UI Designer" width="264" />
+                        <div class="team-card-content">
+                            <h3 class="team-card-name">Daniel Wilson</h3>
+                            <p class="team-card-role">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
+
         
         <section class="features-section">
             <div class="container features-section "> 
