--- a/index.html
+++ b/index.html
@@ -114,42 +114,55 @@
 
         
         <section class="features-section">
-            <div class="container features-section "> 
-        <h2 class="features-section-title">Our Portfolio</h2>
-        <ul class="features-list">
-            <li class="features-card">
-                <img src="./images/images/img-5.jpg" alt="Banking App, App" width="360" />
-                <h3 class="feature-name">Banking App</h3>
-                <p class="feature-item">App</p>
-            </li>
-            <li class="features-card">
-                <img src="./images/images/img-6.jpg" alt="Cashless Payment, Marketing" width="360" />
-                <h3 class="feature-name">Cashless Payment</h3>
-                <p class="feature-item">Marketing</p>
-            </li>
-            <li class="features-card">
-                <img src="./images/images/img-7.jpg" alt="Meditation App, App" width="360" />
-                <h3 class="feature-name">Meditation App</h3>
-                <p class="feature-item">App</p>
-            </li>
-            <li class="features-card">
-                <img src="./images/images/img-8.jpg" alt="Taxi Service, Marketing" width="360" />
-                <h3 class="feature-name">Taxi Service</h3>
-                <p class="feature-item">Marketing</p>
-            </li>
-                <li class="features-card">
-                    <img src="./images/images/img-9.jpg" alt="Screen Illustrations, Design" width="360" />
-                    <h3 class="feature-name">Screen Illustrations</h3>
-                    <p class="feature-item">Design</p>
-
+            <div class="container">
+                <h2 class="features-section-title">Our Portfolio</h2>
+                <ul class="features-list">
+                    <li class="features-card">
+                        <img src="./images/images/img-5.jpg" alt="Banking App, App" width="360" />
+                        <div class="features-card-content">
+                            <h3 class="features-card-title">Banking App</h3>
+                            <p class="features-card-text">App</p>
+                        </div>
+                    </li>
+                    <li class="features-card">
+                        <img src="./images/images/img-6.jpg" alt="Cashless Payment, Marketing" width="360" />
+                        <div class="features-card-content">
+                            <h3 class="features-card-title">Cashless Payment</h3>
+                            <p class="features-card-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="features-card">
+                        <img src="./images/images/img-7.jpg" alt="Meditation App, App" width="360" />
+                        <div class="features-card-content">
+                            <h3 class="features-card-title">Meditation App</h3>
+                            <p class="features-card-text">App</p>
+                        </div>
+                    </li>
+                    <li class="features-card">
+                        <img src="./images/images/img-8.jpg" alt="Taxi Service, Marketing" width="360" />
+                        <div class="features-card-content">
+                            <h3 class="features-card-title">Taxi Service</h3>
+                            <p class="features-card-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="features-card">
+                        <img src="./images/images/img-9.jpg" alt="Screen Illustrations, Design" width="360" />
+                        <div class="features-card-content">
+                            <h3 class="features-card-title">Screen Illustrations</h3>
+                            <p class="features-card-text">Design</p>
+                        </div>
+                    </li>
                     <li class="features-card">
                         <img src="./images/images/img-10.jpg" alt="Online Courses, Marketing" width="360" />
-                        <h3 class="feature-name">Online Courses</h3>
-                        <p class="feature-item">Marketing</p>
-            </li>
-        </ul>
-        </div>
+                        <div class="features-card-content">
+                            <h3 class="features-card-title">Online Courses</h3>
+                            <p class="features-card-text">Marketing</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
+
 
     </main>
 
