--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 
     <main>
         <section class="hero">
-            <div class="container hero-title">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button class="main-title-button" type="button">Order Service</button>
+            <div class="container">
+                <h1 class="hero-title">Effective Solutions for Your Business</h1>
+                <button class="main-title-button" type="button">Order Service</button>
             </div>
         </section>
+
 
         <section class="advantages-section">
             <div class="container">
@@ -167,7 +168,7 @@
     </main>
 
     <footer class="page-footer">
-        <div class="container page-footer">
+        <div class="container">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
 
         <p class="footer-text">
